--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -12,6 +12,7 @@ jobs:
     env:
       HOMEBREW_NO_ANALYTICS: 1
       HOMEBREW_NO_AUTO_UPDATE: 1
+      HOMEBREW_FORCE_HOMEBREW_ON_LINUX: 1
     steps:
       - name: Update Homebrew
         run: |
