workflows: label more (#58727)
- bottle unneeded
- formula deprecated
- formula disabled

--- a/.github/workflows/autolabel.yml
+++ b/.github/workflows/autolabel.yml
@@ -24,5 +24,17 @@ jobs:
                     "label": "marked for removal/rejection",
                     "status": "removed",
                     "path": "Formula/.+"
+                }, {
+                    "label": "bottle unneeded",
+                    "path": "Formula/.+",
+                    "content": "bottle :unneeded"
+                }, {
+                    "label": "formula deprecated",
+                    "path": "Formula/.+",
+                    "content": "deprecate!"
+                }, {
+                    "label": "formula disabled",
+                    "path": "Formula/.+",
+                    "content": "disable!"
                 }
             ]
