--- a/.github/workflows/publish-commit-bottles.yml
+++ b/.github/workflows/publish-commit-bottles.yml
@@ -15,6 +15,7 @@ jobs:
       HOMEBREW_FORCE_HOMEBREW_ON_LINUX: 1
       HOMEBREW_NO_ANALYTICS: 1
       HOMEBREW_NO_AUTO_UPDATE: 1
+      HOMEBREW_NO_PATCHELF_RB: 1
     steps:
       - name: Post comment once started
         uses: Homebrew/actions/post-comment@master
