--- a/.github/workflows/autopublish.yml
+++ b/.github/workflows/autopublish.yml
@@ -10,6 +10,7 @@ jobs:
     if: github.repository == 'Homebrew/homebrew-core'
     runs-on: ubuntu-latest
     env:
+      HOMEBREW_COLOR: 1
       HOMEBREW_NO_ANALYTICS: 1
       HOMEBREW_NO_AUTO_UPDATE: 1
       HOMEBREW_FORCE_HOMEBREW_ON_LINUX: 1
