workflows/autolabel: add missing license (#59140)

--- a/.github/workflows/autolabel.yml
+++ b/.github/workflows/autolabel.yml
@@ -40,6 +40,10 @@ jobs:
                     "label": "legacy",
                     "path": "Formula/.+@.+"
                 }, {
+                    "label": "missing license",
+                    "path": "Formula/.+",
+                    "missing_content": "\n  license .+\n"
+                }, {
                     "label": "go",
                     "path": "Formula/.+",
                     "content": "depends_on \"go(?:@[0-9.]+)?\""
