--- a/.github/workflows/autopublish.yml
+++ b/.github/workflows/autopublish.yml
@@ -1,15 +1,14 @@
 name: Publish and commit bottles on schedule
 
 on:
+  workflow_dispatch:
   schedule:
     # Once every hour
     - cron: '*/60 * * * *'
 
 env:
   HOMEBREW_COLOR: 1
-  HOMEBREW_DEVELOPER: 1
   HOMEBREW_FORCE_HOMEBREW_ON_LINUX: 1
-  HOMEBREW_NO_AUTO_UPDATE: 1
 
 jobs:
   autopublish:
