workflows: test glibc

--- a/.github/workflows/linux-pr-tests.yml
+++ b/.github/workflows/linux-pr-tests.yml
@@ -5,6 +5,7 @@ on:
       - "Formula/alsa-lib.rb"
       - "Formula/attr.rb"
       - "Formula/device-mapper.rb"
+      - "Formula/glibc.rb"
       - "Formula/libaio.rb"
       - "Formula/ladspa-sdk.rb"
       - "Formula/libbsd.rb"
