--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -11,6 +11,9 @@
   "ipython": {
     "extra_packages": ["ipykernel"]
   },
+  "fdroidserver": {
+      "extra_packages": ["wheel"]
+  },
   "molecule": false,
   "openstackclient": {
     "extra_packages": ["python-heatclient"]
