--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -1,5 +1,8 @@
 {
   "ansible": false,
+  "ansible-lint": {
+      "extra_packages": ["ansible-base"]
+  },
   "ansible@2.8": false,
   "cloudformation-cli": {
     "extra_packages": ["cloudformation-cli-go-plugin", "cloudformation-cli-java-plugin"]
