--- a/.github/workflows/linux-dispatch-build-bottle.yml
+++ b/.github/workflows/linux-dispatch-build-bottle.yml
@@ -17,7 +17,6 @@ env:
   HOMEBREW_DEVELOPER: 1
   HOMEBREW_GITHUB_ACTIONS: 1
   HOMEBREW_NO_AUTO_UPDATE: 1
-  HOMEBREW_FORCE_HOMEBREW_ON_LINUX: 1
 
 jobs:
   bottle:
@@ -93,6 +92,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: bottle
     if: github.event.inputs.upload
+    env:
+      HOMEBREW_FORCE_HOMEBREW_ON_LINUX: 1
     steps:
       - name: ${{github.event.inputs.formula}}
         id: print_details
