pypi_formula_mappings: add buku[server]

--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -4,6 +4,7 @@
       "extra_packages": ["ansible-base"]
   },
   "ansible@2.8": false,
+  "buku": "buku[server]",
   "cloudformation-cli": {
     "extra_packages": ["cloudformation-cli-go-plugin", "cloudformation-cli-java-plugin"]
   },
