magic-wormhole: bump python resources to latest version
Closes #73012.

Signed-off-by: Carlo Cabrera <30379873+carlocab@users.noreply.github.com>

--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -22,6 +22,9 @@
       "exclude_packages": ["numpy"],
       "extra_packages": ["wheel"]
   },
+  "magic-wormhole": {
+    "extra_packages": ["wheel"]
+  },
   "molecule": false,
   "openstackclient": {
     "extra_packages": ["python-heatclient"]
