--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -23,6 +23,9 @@
   "openstackclient": {
     "extra_packages": ["python-heatclient"]
   },
+  "nicotine-plus": {
+    "exclude_packages": ["pycairo", "PyGObject"]
+  },
   "pdm": {
     "extra_packages": ["wheel"]
   },
