--- a/.github/workflows/linux-pr-tests.yml
+++ b/.github/workflows/linux-pr-tests.yml
@@ -21,6 +21,7 @@ on:
       - "Formula/libpciaccess.rb"
       - "Formula/libseccomp.rb"
       - "Formula/libtirpc.rb"
+      - "Formula/libunwind.rb"
       - "Formula/libva.rb"
       - "Formula/linux-headers.rb"
       - "Formula/strace.rb"
