checkov: depend on python-tabulate
Closes #73178.

Signed-off-by: Sean Molenaar <1484494+SMillerDev@users.noreply.github.com>
Signed-off-by: Carlo Cabrera <30379873+carlocab@users.noreply.github.com>

--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -11,6 +11,9 @@
   "charm-tools": {
     "extra_packages": ["wheel"]
   },
+  "checkov": {
+    "exclude_packages": ["tabulate"]
+  },
   "diffoscope": "diffoscope[cmdline]",
   "ipython": {
     "extra_packages": ["ipykernel"]
