todoman: depend on python-tabulate
Also, update resources.

Closes #73182.

Signed-off-by: Sean Molenaar <1484494+SMillerDev@users.noreply.github.com>
Signed-off-by: Carlo Cabrera <30379873+carlocab@users.noreply.github.com>

--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -41,6 +41,9 @@
   "scipy": {
     "exclude_packages": ["numpy"]
   },
+  "todoman": {
+    "exclude_packages": ["tabulate"]
+  },
   "xdot": {
     "extra_packages": ["graphviz"]
   },
