github/workflows: use GitHub Packages (#73185)
Also, ensure that pull requests to the Linux workflows test the
workflow too.

--- a/.github/workflows/linux-dispatch-build-bottle.yml
+++ b/.github/workflows/linux-dispatch-build-bottle.yml
@@ -22,7 +22,7 @@ jobs:
   bottle:
     runs-on: ubuntu-latest
     container:
-      image: homebrew/ubuntu16.04:master
+      image: ghcr.io/homebrew/ubuntu16.04:master
     env:
       HOMEBREW_BOTTLE_DOMAIN: https://homebrew.bintray.com/
     steps:
