platformio: depend on python-tabulate
Also, update resources.

Closes #73209.

Signed-off-by: Sean Molenaar <1484494+SMillerDev@users.noreply.github.com>
Signed-off-by: Carlo Cabrera <30379873+carlocab@users.noreply.github.com>

--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -38,6 +38,9 @@
   "pipgrip": {
     "extra_packages": ["wheel"]
   },
+  "platformio": {
+    "exclude_packages": ["tabulate"]
+  },
   "poetry": {
     "extra_packages": ["importlib-metadata", "typing-extensions"]
   },
