--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -28,6 +28,9 @@
       "exclude_packages": ["numpy"],
       "extra_packages": ["wheel"]
   },
+  "homeassistant-cli": {
+    "exclude_packages": ["tabulate"]
+  },
   "litecli": {
     "exclude_packages": ["tabulate"]
   },
