anime-downloader: depend on python-tabulate
Also, update resources.

Closes #73213.

Signed-off-by: Sean Molenaar <1484494+SMillerDev@users.noreply.github.com>
Signed-off-by: Carlo Cabrera <30379873+carlocab@users.noreply.github.com>

--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -1,4 +1,7 @@
 {
+  "anime-downloader": {
+    "exclude_packages": ["tabulate"]
+  },
   "ansible": false,
   "ansible-lint": {
       "extra_packages": ["ansible-base"]
