sqlite-utils: depend on python-tabulate
Closes #73214.

Signed-off-by: Sean Molenaar <1484494+SMillerDev@users.noreply.github.com>
Signed-off-by: Carlo Cabrera <30379873+carlocab@users.noreply.github.com>

--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -50,6 +50,9 @@
   "scipy": {
     "exclude_packages": ["numpy"]
   },
+  "sqlite-utils": {
+    "exclude_packages": ["tabulate"]
+  },
   "todoman": {
     "exclude_packages": ["tabulate"]
   },
