athenacli: depend on python-tabulate
Also, update resources.

Closes #73216.

Signed-off-by: Carlo Cabrera <30379873+carlocab@users.noreply.github.com>

--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -10,6 +10,9 @@
   "aws-google-auth": {
     "exclude_packages": ["tabulate"]
   },
+  "athenacli": {
+    "exclude_packages": ["tabulate"]
+  },
   "buku": "buku[server]",
   "cloudformation-cli": {
     "extra_packages": ["cloudformation-cli-go-plugin", "cloudformation-cli-java-plugin"]
