--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -28,6 +28,9 @@
       "exclude_packages": ["numpy"],
       "extra_packages": ["wheel"]
   },
+  "litecli": {
+    "exclude_packages": ["tabulate"]
+  },
   "magic-wormhole": {
     "extra_packages": ["wheel"]
   },
