workflows/linux-pr-tests: add lttng-ust

--- a/.github/workflows/linux-pr-tests.yml
+++ b/.github/workflows/linux-pr-tests.yml
@@ -25,6 +25,7 @@ on:
       - "Formula/libunwind.rb"
       - "Formula/libva.rb"
       - "Formula/linux-headers.rb"
+      - "Formula/lttng-ust.rb"
       - "Formula/numactl.rb"
       - "Formula/strace.rb"
       - "Formula/valgrind.rb"
