mycli: depend on python-tabulate
Closes #73230.

Signed-off-by: Alexander Bayandin <a.bayandin@gmail.com>
Signed-off-by: Carlo Cabrera <30379873+carlocab@users.noreply.github.com>

--- a/pypi_formula_mappings.json
+++ b/pypi_formula_mappings.json
@@ -41,6 +41,9 @@
     "extra_packages": ["wheel"]
   },
   "molecule": false,
+  "mycli": {
+    "exclude_packages": ["tabulate"]
+  },
   "openstackclient": {
     "extra_packages": ["python-heatclient"]
   },
