--- a/.github/workflows/autopublish.yml
+++ b/.github/workflows/autopublish.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   schedule:
     # Once every hour
-    - cron: '*/60 * * * *'
+    - cron: "*/60 * * * *"
 
 env:
   HOMEBREW_FORCE_HOMEBREW_ON_LINUX: 1
