--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -8,6 +8,7 @@ body:
       value: Please note we will close your issue without comment if you do not fill out the issue checklist below and provide ALL the requested information. If you repeatedly fail to use the issue template, we will block you from ever submitting issues to Homebrew again.
   - type: textarea
     attributes:
+      render: :shell
       label: "`brew gist-logs <formula>` link OR `brew config` AND `brew doctor` output"
     validations:
       required: true
@@ -34,6 +35,7 @@ body:
       required: true
   - type: textarea
     attributes:
+      render: :shell
       label: Step-by-step reproduction instructions (by running `brew` commands)
     validations:
       required: true
